--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </svg>
             </div>
             <h1 class="titre"><span style="font-size: 40px;">日本<br></span>Japon</h1>
-            <video autoplay muted loop>
+            <video autoplay muted loop playsinline webkit-playsinline>
                 <source src="assets/video/fond1.mp4" type="video/mp4">
             </video>
         </div>
